# cot-relevance

./: .gitignore  README.md  pyproject.toml
docs/: cot-faithfulness-background.md  design-doc.md  multi-step-performativity.md  rl-pair-performativity.md
performativity/: __init__.py
performativity/analysis/: __init__.py  plots.py
performativity/benchmarks/: __init__.py  calibration.py  mcq.py
performativity/experiments/: __init__.py  rl_pair.py
performativity/inference/: __init__.py  local_model.py  trace.py
performativity/judges/: __init__.py  cot_monitor.py
performativity/metrics/: __init__.py  performativity_rate.py
performativity/probes/: __init__.py  attention_probe.py  trainer.py
